Show a banner if an unimplemented command-line flag is used.

Some command-line flags (e.g. --enable-heap-profiling) are only
implemented in specific build configurations (e.g. Release+Static), and
in all other binaries we want to warn the user that the flag will be
ignored, if it is specified.

Bug: 705461
Change-Id: Ie41be966ecf17935c52590826901b15cea7171f8