chrome/browser/ui/startup/bad_flags_prompt.cc
@@ -4,9 +4,11 @@
 
 #include "chrome/browser/ui/startup/bad_flags_prompt.h"
 
+#include "base/base_switches.h"
 #include "base/command_line.h"
 #include "base/files/file_path.h"
 #include "base/strings/utf_string_conversions.h"
+#include "base/trace_event/memory_dump_manager.h"
 #include "build/build_config.h"
 #include "chrome/browser/infobars/infobar_service.h"
 #include "chrome/browser/ui/browser.h"
@@ -39,6 +41,29 @@ void ShowBadFlagsPrompt(Browser* browser) {
       browser->tab_strip_model()->GetActiveWebContents();
   if (!web_contents)
     return;
+
+  // Supported flags only available in specific builds, for which to display a
+  // warning "the flag is not implemented in this build", if necessary.
+  static struct {
+    const char* name;
+    bool is_supported;
+  } kMaybeImplementedFlags[] = {
+    { switches::kEnableHeapProfiling, base::trace_event::MemoryDumpManager::IsHeapProfilingSupported() }
+  };
+
+  for (const auto& flag_info : kMaybeImplementedFlags) {
+    if (base::CommandLine::ForCurrentProcess()->HasSwitch(flag_info.name) &&
+            !flag_info.is_supported) {
+      SimpleAlertInfoBarDelegate::Create(
+          InfoBarService::FromWebContents(web_contents),
+          infobars::InfoBarDelegate::BAD_FLAGS_PROMPT, nullptr,
+          l10n_util::GetStringFUTF16(
+              IDS_UNIMPLEMENTED_FLAGS_WARNING_MESSAGE,
+              base::UTF8ToUTF16(std::string("--") + flag_info.name)),
+          false);
+      return;
+    }
+  }
 
   // Unsupported flags for which to display a warning that "stability and
   // security will suffer".
@@ -94,19 +119,17 @@ void ShowBadFlagsPrompt(Browser* browser) {
 
     // This flag allows sites to access protected media identifiers without
     // getting the user's permission.
-    switches::kUnsafelyAllowProtectedMediaIdentifierForDomain,
-
-    NULL
+    switches::kUnsafelyAllowProtectedMediaIdentifierForDomain
   };
 
-  for (const char** flag = kBadFlags; *flag; ++flag) {
-    if (base::CommandLine::ForCurrentProcess()->HasSwitch(*flag)) {
+  for (const char* flag : kBadFlags) {
+    if (base::CommandLine::ForCurrentProcess()->HasSwitch(flag)) {
       SimpleAlertInfoBarDelegate::Create(
           InfoBarService::FromWebContents(web_contents),
           infobars::InfoBarDelegate::BAD_FLAGS_PROMPT, nullptr,
           l10n_util::GetStringFUTF16(
               IDS_BAD_FLAGS_WARNING_MESSAGE,
-              base::UTF8ToUTF16(std::string("--") + *flag)),
+              base::UTF8ToUTF16(std::string("--") + flag)),
           false);
       return;
     }
